--- a/Frontend/src/app/search-query-page/search-query-page.component.html
+++ b/Frontend/src/app/search-query-page/search-query-page.component.html
@@ -2,5 +2,11 @@
 <button (click)="answerTab()">Answer Query</button>
 <button (click)="logout()">LogOut</button>
 
+<br>
+
+  
 <input name="search" placeholder="tagsForSearch">
 <button>Submit</button>
+
+<app-questionlist></app-questionlist>
+
