Get default questions

--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -1,4 +1,4 @@
-<h1>Hello</h1>
+<h1>Questions</h1>
 <div *ngFor="let question of questionlist">
     <h1>{{question.title}}</h1>
     <p>{{question.body}}</p>
