Question Page and Answer Page connected

--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -5,7 +5,7 @@
 
     <button (click)="showans(i)">ShowAns</button>
     <div *ngIf="showVar[i]">
-        <app-answerlist quesId={{question.id}}></app-answerlist>
+        <app-answerlist quesId={{question.qid}}></app-answerlist>
     </div>
 
 </div>
