bug fixes for search question

--- a/Frontend/src/app/search-query-page/search-query-page.component.html
+++ b/Frontend/src/app/search-query-page/search-query-page.component.html
@@ -8,5 +8,5 @@
 <input name="search" placeholder="tagsForSearch" [(ngModel)]="Qkeywords" [ngModelOptions]="{standalone: true}">
 <button (click)="quesSearch()">Submit</button>
 
-<app-questionlist [temp]='temp' ></app-questionlist>
+<app-questionlist [temp]='temp' [ftest]='ftest'></app-questionlist>
 
