changes from Ashit->Sumanto

--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -6,7 +6,8 @@
     <h1>{{question.title}}</h1>
     <p>{{question.body}}</p>
     <div *ngIf="showVar[i]">
-        <app-answerlist></app-answerlist>
+        <app-answerlist quesId={{question.qid}}></app-answerlist>
+        <button>Mark</button>
     </div>
 </div>
     <button (click)="showans(i)">ShowAns</button>
@@ -16,12 +17,13 @@
 
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
+    <button>Add New Question</button>
 <div *ngFor="let question of seachQueList; index as i">
     <div class="quesid">
     <h1>{{question.title}}</h1>
     <p>{{question.body}}</p>
     <div *ngIf="showVar[i]">
-        <app-answerlist></app-answerlist>
+        <app-answerlist quesId={{question.qid}}></app-answerlist>
     </div>
 </div>
     <button (click)="showans(i)">ShowAns</button>
