--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -2,12 +2,13 @@
 <div *ngFor="let question of questiontopiclist;let i = index">
 <mat-card class="example-card">
     <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
+        <div mat-card-avatar style="background-image: url({{question.qphoto}});
+        background-size: cover;"></div>
         <mat-card-title><i>{{question.quser}}</i> <br>{{question.title}}</mat-card-title>
         <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
     </mat-card-header>
 
-    <button (click)="showans(i)">ShowAns</button>
+    <button class="button" (click)="showans(i)"><span>View answers</span></button>
     <mat-card-content>
         <div *ngIf="showVar[i]">
             <p>
