--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -17,11 +17,12 @@
 
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
-    <button>Add New Question</button>
+    <button (click)="addQues()">Add New Question</button>
 <div *ngFor="let question of seachQueList; index as i">
     <div class="quesid">
     <h1>{{question.title}}</h1>
     <p>{{question.body}}</p>
+    <button (click)="addAns(question.qid) ">Add New Answer</button>
     <div *ngIf="showVar[i]">
         <app-answerlist quesId={{question.qid}}></app-answerlist>
     </div>
