--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -1,23 +1,47 @@
 <button (click)="showsearchQues()">Home</button>
 <div *ngIf="toogleques">
 <h1>Questions</h1>
+<div *ngIf='qlen2'>
 <div *ngFor="let question of questionlist; index as i">
-    <div class="quesid">
-    <h1>{{question.title}}</h1>
-    <p>{{question.body}}</p>
-    <div *ngIf="showVar[i]">
-        <app-answerlist quesId={{question.qid}}></app-answerlist>
-        <button>Mark</button>
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar style="background-image: url({{question.quphoto}});
+            background-size: cover;"></div>
+            <mat-card-title>{{question.title}}</mat-card-title>
+            <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
+        </mat-card-header>
+        
+        <!-- <div *ngIf="showVar[i]">
+            <app-answerlist quesId={{question.qid}}></app-answerlist>
+            <button>Mark</button>
+        </div> -->
+
+        <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <mat-card-content>
+            <div *ngIf="showVar[i]">
+                <p>
+                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                </p>
+            </div>
+        </mat-card-content>
+    </mat-card>
+      
     </div>
 </div>
-    <button (click)="showans(i)">ShowAns</button>
+
+<div *ngIf='!qlen2'>
+    <span>No Questions Found</span>
 </div>
 
 </div>
+    
+
+
 
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
-    <button (click)="addQues()">Add New Question</button>
+    <button>Add New Question</button>
+
 <div *ngFor="let question of seachQueList; index as i">
     <div class="quesid">
     <h1>{{question.title}}</h1>
@@ -27,5 +51,8 @@
     </div>
 </div>
     <button (click)="showans(i)">ShowAns</button>
+</div>
+<div *ngIf='!qlen1'>
+    <span>No Question Found</span>
 </div>
 </div>
