--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -1,10 +1,22 @@
+
 <div *ngFor="let question of questiontopiclist;let i = index">
-    <h1>{{question.title}}</h1>
-    <p>{{question.body}}</p>
-
-    <button (click)="showans(i)">ShowAns</button>
-    <div *ngIf="showVar[i]">
-        <app-answerlist quesId={{question.qid}}></app-answerlist>
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar style="background-image: url({{question.qphoto}});
+            background-size: cover;"></div>
+            <mat-card-title><i>{{question.quser}}</i> <br>{{question.title}}</mat-card-title>
+            <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
+        </mat-card-header>
+    
+        <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <mat-card-content>
+            <div *ngIf="showVar[i]">
+                <p>
+                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                </p>
+            </div>
+        </mat-card-content>
+    </mat-card>
+      
     </div>
-
-</div>
+    
