--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -41,18 +41,27 @@
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
     <button>Add New Question</button>
-
 <div *ngFor="let question of seachQueList; index as i">
-    <div class="quesid">
-    <h1>{{question.title}}</h1>
-    <p>{{question.body}}</p>
-    <div *ngIf="showVar[i]">
-        <app-answerlist quesId={{question.qid}}></app-answerlist>
-    </div>
-</div>
-    <button (click)="showans(i)">ShowAns</button>
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar style="background-image: url({{question.quphoto}});
+            background-size: cover;"></div>
+            <mat-card-title>{{question.title}}</mat-card-title>
+            <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
+        </mat-card-header>
+        <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <mat-card-content>
+            <div *ngIf="showVar[i]">
+                <p>
+                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                </p>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
 <div *ngIf='!qlen1'>
-    <span>No Question Found</span>
+    <br>
+    <br>
+    <span>No Questions Found</span>
 </div>
 </div>
