--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -1,6 +1,7 @@
 <button (click)="showsearchQues()">Home</button>
 <div *ngIf="toogleques">
 <h1>Questions</h1>
+<div *ngIf='qlen2'>
 <div *ngFor="let question of questionlist; index as i">
     <mat-card class="example-card">
         <mat-card-header>
@@ -26,21 +27,41 @@
     </mat-card>
       
     </div>
+</div>
+
+<div *ngIf='!qlen2'>
+    <span>No Questions Found</span>
+</div>
+
+</div>
     
 
 
 
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
-    <button>Add New Question</button>
-<div *ngFor="let question of seachQueList; index as i">
-    <div class="quesid">
-    <h1>{{question.title}}</h1>
-    <p>{{question.body}}</p>
-    <div *ngIf="showVar[i]">
-        <app-answerlist quesId={{question.qid}}></app-answerlist>
-    </div>
+    <button (click)="addQues()">Add New Question</button>
+<div *ngFor="let squestion of seachQueList; index as i">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar style="background-image: url({{squestion.quphoto}});
+            background-size: cover;"></div>
+            <mat-card-title>{{squestion.title}}</mat-card-title>
+            <mat-card-subtitle>{{squestion.body}} </mat-card-subtitle>
+        </mat-card-header>
+        <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <mat-card-content>
+            <div *ngIf="showVar[i]">
+                <p>
+                <app-answerlist quesId={{squestion.qid}}></app-answerlist>
+                </p>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
-    <button (click)="showans(i)">ShowAns</button>
+<div *ngIf='!qlen1'>
+    <br>
+    <br>
+    <span>No Questions Found</span>
 </div>
 </div>
