few fixes frontend

--- a/Frontend/src/app/answerlist/answerlist.component.html
+++ b/Frontend/src/app/answerlist/answerlist.component.html
@@ -4,7 +4,7 @@
         <mat-card-header>
             <div mat-card-avatar style="background-image: url({{answer.aphoto}});
             background-size: cover;"></div>
-            <mat-card-title><i>{{answer.user}}</i> </mat-card-title>
+            <mat-card-title><em>{{answer.user}}</em> </mat-card-title>
             <div *ngIf="answer.correctAnswer">
             <mat-card-subtitle>Accepted answer</mat-card-subtitle>
             </div>
