--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -10,11 +10,6 @@
             <mat-card-title>{{question.title}}</mat-card-title>
             <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
         </mat-card-header>
-        
-        <!-- <div *ngIf="showVar[i]">
-            <app-answerlist quesId={{question.qid}}></app-answerlist>
-            <button>Mark</button>
-        </div> -->
 
         <button class="button" (click)="showans(i)"><span>View answers</span></button>
         <mat-card-content>
@@ -40,20 +35,20 @@
 
 <div *ngIf="!toogleques">
     <h1>SQuestions</h1>
-    <button>Add New Question</button>
-<div *ngFor="let question of seachQueList; index as i">
+    <button (click)="addQues()">Add New Question</button>
+<div *ngFor="let squestion of seachQueList; index as i">
     <mat-card class="example-card">
         <mat-card-header>
-            <div mat-card-avatar style="background-image: url({{question.quphoto}});
+            <div mat-card-avatar style="background-image: url({{squestion.quphoto}});
             background-size: cover;"></div>
-            <mat-card-title>{{question.title}}</mat-card-title>
-            <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
+            <mat-card-title><em>{{squestion.quser}}</em> <br>{{squestion.title}}</mat-card-title>
+            <mat-card-subtitle>{{squestion.body}} </mat-card-subtitle>
         </mat-card-header>
         <button class="button" (click)="showans(i)"><span>View answers</span></button>
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                <app-answerlist quesId={{squestion.qid}}></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
