--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -4,11 +4,12 @@
         <mat-card-header>
             <div mat-card-avatar style="background-image: url({{question.qphoto}});
             background-size: cover;"></div>
-            <mat-card-title><i>{{question.quser}}</i> <br>{{question.title}}</mat-card-title>
+            <mat-card-title><em>{{question.quser}}</em> <br>{{question.title}}</mat-card-title>
             <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
         </mat-card-header>
     
         <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <button class="button" (click)="addAns(question.qid)"><span>Add answer</span></button>
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
