--- a/Frontend/src/app/addquestions/addquestions.component.css
+++ b/Frontend/src/app/addquestions/addquestions.component.css
@@ -1,72 +1,96 @@
 .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: black;
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-  }
-  
-  .login-box h2 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .login-box .user-box {
-    position: relative;
-  }
-  
-  .login-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-  }
-  .login-box .user-box label {
-    position: absolute;
-    top:0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 12px;
-  }
+  position: absolute;
+  margin-top: 2%;
+  left: 50%;
+  width: 43%;
+  height: 90%;
+  padding: 3%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  background:var(--ligt);
+  box-sizing: border-box;
+  border-radius: 20px;
+  font-family: nevis;
+  font-size: larger;
+}
 
+.login-box h3 {
+  margin: 0 0 30px;
+  padding: 0;
+  color:var(--dark);
+  text-align: center;
+}
 
-  .button {
-    background-color: #f4511e;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
-    opacity: 0.6;
-    transition: 0.3s;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .button:hover {opacity: 1}
-  
+.login-box .user-box{
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: var(--dark);
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid var(--dark);
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: var(--dark);
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: var(--dark);
+  font-size: 12px;
+}
+
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: var(--dark);
+  background-color: var(--ligt);
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 10px;
+  letter-spacing: 4px;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background: var(--dark);
+  color: var(--ligt);
+  cursor: pointer;
+}
+
+.tx{
+  background-color: var(--dark);
+  font-size: 17px;
+  color: var(--ligt);
+  font-family: nevis;
+}
+
+.c{
+  color: var(--ligt);
+   background-color: var(--dark);
+   width: 40%; 
+  font-size: 18px;
+}
+.c option :hover{
+  color:var(--ligt);
+  background-color: var(--dark);
+}
