--- a/Frontend/src/app/answer-query-page/answer-query-page.component.html
+++ b/Frontend/src/app/answer-query-page/answer-query-page.component.html
@@ -1,6 +1,8 @@
-<h1>Its Answer query</h1>
-<button (click)="searchTab()">Search Query</button>
-<button (click)="logout()">LogOut</button>
-
+<div class="navbar">
+    <button class="b" (click)="searchTab()">Search</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button class="ba">Answer</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button class="b" (click)="logout()">LogOut</button>
+</div>
+<br>
 
 <app-questiontopiclist></app-questiontopiclist>
