--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,7 +1,7 @@
 .header {
-    padding: 60px;
+    padding: 10px;
     text-align: center;
-    background : black;
-    color: white;
-    font-size: 30px;
+    color:var(--ligt);
+    font-family: mario;
+    font-size: 40px;
   }
