--- a/Frontend/src/app/login-page/login-page.component.html
+++ b/Frontend/src/app/login-page/login-page.component.html
@@ -1,21 +1,17 @@
 <div class ="backg">
 <div class="login-box">
-    <h2>Login</h2>
+    <h2><i>LOGIN</i></h2>
     <form>
       <div class="user-box">
         <input type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
-        <label>Username</label>
+        <label style="font-size:small;">Username<br></label>
       </div>
       <div class="user-box">
         <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
-        <label>Password</label>
+        <label style="font-size:small;">Password<br></label>
       </div>
       <span class="error">{{err}}</span>
       <a (click)='loggedIn()'>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
         Submit
       </a>
     </form>
