--- a/Frontend/src/app/questionlist/questionlist.component.css
+++ b/Frontend/src/app/questionlist/questionlist.component.css
@@ -1,13 +1,16 @@
 .example-card {
     max-width: 70%;
     margin-left: 14%;
+    margin-top: 3%;
+    background-color: var(--ligt);
+    padding: 2%;
   }
 
   .button {
     border-radius: 4px;
-    background-color: #f4511e;
+    background-color: var(--dark);
     border: none;
-    color: #FFFFFF;
+    color: var(--ligt);
     text-align: center;
     font-size: 14px;
     padding: 10px;
@@ -41,3 +44,26 @@
     opacity: 1;
     right: 0;
   }
+
+  
+.b {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: var(--dark);
+  background-color: var(--ligt);
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 10px;
+  letter-spacing: 4px;
+  border-radius: 5px;
+}
+
+.b:hover {
+  background: var(--dark);
+  color: var(--ligt);
+  cursor: pointer;
+}
