Mark Answer linking

--- a/Frontend/src/app/answerlist/answerlist.component.html
+++ b/Frontend/src/app/answerlist/answerlist.component.html
@@ -13,6 +13,9 @@
             {{answer.body}}
         </mat-card-content><br>
     </mat-card>
+    <div *ngIf='mark'>
+        <button class='button' (click)='upvote(answer.ansId)'>Mark</button>
+    </div>
     </div>
     </div>
     
