--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -15,7 +15,7 @@
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                <app-answerlist quesId={{question.qid}} [markbutton]=true></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
@@ -48,7 +48,7 @@
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{squestion.qid}}></app-answerlist>
+                <app-answerlist quesId={{squestion.qid}} [markbutton]=false></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
