--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -13,7 +13,7 @@
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{question.qid}}></app-answerlist>
+                <app-answerlist quesId={{question.qid}} [markbutton]=false></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
