snackbar and old keyword added

--- a/Frontend/src/app/addquestions/addquestions.component.html
+++ b/Frontend/src/app/addquestions/addquestions.component.html
@@ -25,6 +25,6 @@
         <input formControlName="quesDesc">
         <label>Description</label>
       </div>
-      <button class="button" (click)='addQues()'>Add</button>
+      <button mat-stroked-button (click)='addQues()'>Add</button>
     </form>
   </div>
