--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="header">
-  <h1>Accolite Forums</h1>
-</div>
+  <h1>Accolite Forums </h1>
+  <!-- <div class=i>
+    <img src='https://i.ibb.co/mc1D229/1.jpg' style="border-radius: 60%; width:130px"></div> -->
+  </div>
 <br>
 <br>
 
