--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -3,7 +3,7 @@
 html, body { height: 100%; background-color:var(--dark);}
 
 :root{
-    --dark: #9A1750;
+    --dark: #2b7a78;
     --ligt:#DADED4;
 }
 
