--- a/Frontend/src/app/addquestions/addquestions.component.css
+++ b/Frontend/src/app/addquestions/addquestions.component.css
@@ -1,9 +1,9 @@
 .login-box {
   position: absolute;
-  margin-top: 2%;
+  margin-top: .4%;
   left: 50%;
   width: 43%;
-  height: 90%;
+  height: 93%;
   padding: 3%;
   text-align: center;
   transform: translate(-50%, -50%);
