--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -1,4 +1,3 @@
-
 <div *ngFor="let squestion of questiontopiclist;let i = index">
     <mat-card class="example-card">
         <mat-card-header>
@@ -13,7 +12,7 @@
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{squestion.qid}}></app-answerlist>
+                <app-answerlist quesId={{squestion.qid}} [markbutton]=false></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
@@ -22,4 +21,5 @@
 
 
 <br><br><br>
+    
     
