--- a/Frontend/src/app/addanswers/addanswers.component.html
+++ b/Frontend/src/app/addanswers/addanswers.component.html
@@ -1,10 +1,12 @@
 <div class="login-box">
-    <h2>Add Answer</h2>
-    <form [formGroup]='lecform'>
-      <div class="user-box">
-        <input formControlName="ansBody">
-        <label>Answer Body Here</label>
-      </div>
-      <button (click)="addAns()" class="button">Add</button>
-    </form>
-  </div>
+  <h3><i>Add answer</i></h3><br><br>
+  <form [formGroup]='lecform'>
+    <div class="user-box">
+      <label>Enter answer body:</label>
+      <br><br>
+      <textarea rows="10" cols="40" formControlName="ansBody" class="tx"></textarea>
+    </div>
+    <br><br>
+    <button (click)="addAns()" class="button">Add</button>
+  </form>
+</div>
