--- a/Frontend/src/app/addquestions/addquestions.component.html
+++ b/Frontend/src/app/addquestions/addquestions.component.html
@@ -1,27 +1,30 @@
 <div class="login-box">
-    <h2>Add Question</h2>
+    <h3><i>ASK QUESTION</i></h3>
     <form [formGroup]='quesObj'>
-        <label for="input">Choose your topic:</label> 
-<select name="Topic">
-<option value="1">Badminton</option>
-<option value="2">Algorithm</option>
-<option value="3">Technology</option>
-<option value="4">Framework</option>
-<option value="5">Psychiatry</option>
-<option value="6">Chess</option>
+        <label style="color: var(--dark);" for="input">Choose your topic:   </label> 
+<select id="demo" formControlName="topic" class="c">
+<option value="badminton">badminton</option>
+<option value="algorithm">algorithm</option>
+<option value="technology">technology</option>
+<option value="framework">framework</option>
+<option value="psychiatry">psychiatry</option>
+<option value="chess">chess</option>
 </select>
+<br><br><br>
       <div class="user-box">
-        <input formControlName="Keywords">
-        <label>Keywords</label>
+        <input style="background-color: var(--dark);  width: 92%; margin-top: 2%; color: var(--ligt);" formControlName="Keywords">
+        <label>Keywords (comma separated) <br><br></label>
       </div>
       <div class="user-box">
-        <input formControlName="quesTitle">
-        <label>Tile</label>
+        <label>Title:</label>
+        <br><br>
+        <textarea rows="3" cols="60" formControlName="quesTitle" class="tx"></textarea>
       </div>
       <div class="user-box">
-        <input formControlName="quesDesc">
-        <label>Description</label>
-      </div>
-      <button class="button">Add</button>
+        <label>Description:</label>
+        <br><br>
+        <textarea rows="5" cols="60" formControlName="quesDesc" class="tx"></textarea>
+      </div> <br>
+      <button mat-stroked-button class="button"(click)='addQues()'>Add</button>
     </form>
   </div>
