--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,7 +1,12 @@
 .header {
-    padding: 60px;
-    text-align: center;
-    background : black;
-    color: white;
-    font-size: 30px;
-  }
+  padding: 10px;
+  text-align: center;
+  color:var(--ligt);
+  font-family: mario;
+  font-size: 40px;
+}
+
+.i{
+  margin-top: -12%;
+  margin-left: 80%;
+}
