--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%; background-color:var(--dark);}
+
+:root{
+    --dark: #2b7a78;
+    --ligt:#DADED4;
+}
+
+@font-face {
+    font-family: "mario";
+    src: local("Oxygen"), url(./assets/fonts/super-mario-bros-font/SuperMarioBros-ov7d.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "nevis";
+    src: local("Oxygen"), url(./assets/fonts/nevis-font/NevisBold-KGwl.ttf) format("truetype");
+}
