--- a/Frontend/src/app/questionlist/questionlist.component.html
+++ b/Frontend/src/app/questionlist/questionlist.component.html
@@ -1,6 +1,5 @@
-<button (click)="showsearchQues()">Home</button>
+<button class="b" style="position: absolute; margin-top: -5%; margin-left: 23%" (click)="showsearchQues()">My Questions</button>
 <div *ngIf="toogleques">
-<h1>Questions</h1>
 <div *ngIf='qlen2'>
 <div *ngFor="let question of questionlist; index as i">
     <mat-card class="example-card">
@@ -11,7 +10,7 @@
             <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
         </mat-card-header>
 
-        <button class="button" (click)="showans(i)"><span>View answers</span></button>
+        <button class="button" (click)="showans(i)">View answers</button>
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
@@ -24,8 +23,8 @@
     </div>
 </div>
 
-<div *ngIf='!qlen2'>
-    <span>No Questions Found</span>
+<div *ngIf='!qlen2' style="color:var(--ligt);  font-size: 17px; margin-top: 8%; margin-left: 43%;">
+    <span>You have not asked any questions!</span>
 </div>
 
 </div>
@@ -34,29 +33,29 @@
 
 
 <div *ngIf="!toogleques">
-    <h1>SQuestions</h1>
-    <button (click)="addQues()">Add New Question</button>
-<div *ngFor="let squestion of seachQueList; index as i">
-    <mat-card class="example-card">
-        <mat-card-header>
-            <div mat-card-avatar style="background-image: url({{squestion.quphoto}});
-            background-size: cover;"></div>
-            <mat-card-title><em>{{squestion.quser}}</em> <br>{{squestion.title}}</mat-card-title>
-            <mat-card-subtitle>{{squestion.body}} </mat-card-subtitle>
-        </mat-card-header>
-        <button class="button" (click)="showans(i)"><span>View answers</span></button>
-        <mat-card-content>
-            <div *ngIf="showVar[i]">
-                <p>
-                <app-answerlist quesId={{squestion.qid}} [markbutton]=false></app-answerlist>
-                </p>
-            </div>
-        </mat-card-content>
-    </mat-card>
-</div>
-<div *ngIf='!qlen1'>
-    <br>
-    <br>
-    <span>No Questions Found</span>
-</div>
+        <button class="b" style="margin-left: 43%;" (click)="addQues()">Ask a question</button>
+    <div *ngFor="let squestion of seachQueList; index as i">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar style="background-image: url({{squestion.quphoto}});
+                background-size: cover;"></div>
+                <mat-card-title>{{squestion.quser}}</mat-card-title> 
+                <mat-card-subtitle>{{squestion.title}}</mat-card-subtitle>
+                <mat-card-subtitle>{{squestion.body}} </mat-card-subtitle>
+            </mat-card-header>
+            <button class="button" (click)="showans(i)"><span>View answers</span></button>
+            <mat-card-content>
+                <div *ngIf="showVar[i]">
+                    <p>
+                    <app-answerlist quesId={{squestion.qid}} [markbutton]=false></app-answerlist>
+                    </p>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div *ngIf='!qlen1' style="color:var(--ligt);  font-size: 17px; margin-top: 8%; margin-left: 46.5%;">
+        <br>
+        <br>
+        <span>No results to show!</span>
+    </div>
 </div>
