--- a/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
+++ b/Frontend/src/app/questiontopiclist/questiontopiclist.component.html
@@ -1,23 +1,25 @@
-
-<div *ngFor="let question of questiontopiclist;let i = index">
+<div *ngFor="let squestion of questiontopiclist;let i = index">
     <mat-card class="example-card">
         <mat-card-header>
-            <div mat-card-avatar style="background-image: url({{question.qphoto}});
+            <div mat-card-avatar style="background-image: url({{squestion.qphoto}});
             background-size: cover;"></div>
-            <mat-card-title><em>{{question.quser}}</em> <br>{{question.title}}</mat-card-title>
-            <mat-card-subtitle>{{question.body}} </mat-card-subtitle>
+            <mat-card-title>{{squestion.quser}}</mat-card-title> 
+            <mat-card-subtitle>{{squestion.title}}</mat-card-subtitle>
+            <mat-card-subtitle>{{squestion.body}} </mat-card-subtitle>
         </mat-card-header>
-    
         <button class="button" (click)="showans(i)"><span>View answers</span></button>
-        <button class="button" (click)="addAns(question.qid)"><span>Add answer</span></button>
+        <button class="button" (click)="addAns(squestion.qid)"><span>Write answer</span></button>
         <mat-card-content>
             <div *ngIf="showVar[i]">
                 <p>
-                <app-answerlist quesId={{question.qid}} [markbutton]=false></app-answerlist>
+                <app-answerlist quesId={{squestion.qid}} [markbutton]=false></app-answerlist>
                 </p>
             </div>
         </mat-card-content>
     </mat-card>
-      
-    </div>
+</div>
+
+
+<br><br><br>
+    
     
