Solved linting issues

--- a/Frontend/src/app/addanswers/addanswers.component.html
+++ b/Frontend/src/app/addanswers/addanswers.component.html
@@ -1,5 +1,5 @@
 <div class="login-box">
-  <h3><i>Add answer</i></h3><br><br>
+  <h3><em>Add answer</em></h3><br><br>
   <form [formGroup]='lecform'>
     <div class="user-box">
       <label>Enter answer body:</label>
