--- a/Frontend/src/app/addquestions/addquestions.component.html
+++ b/Frontend/src/app/addquestions/addquestions.component.html
@@ -1,5 +1,5 @@
 <div class="login-box">
-    <h3><i>ASK QUESTION</i></h3>
+    <h3><em>ASK QUESTION</em></h3>
     <form [formGroup]='quesObj'>
         <label style="color: var(--dark);" for="input">Choose your topic:   </label> 
 <select id="demo" formControlName="topic" class="c">
