--- a/Frontend/src/app/login-page/login-page.component.html
+++ b/Frontend/src/app/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <div class ="backg">
   <div class="login-box">
-      <h2><i>LOGIN</i></h2>
+      <h2><em>LOGIN</em></h2>
       <form>
         <div class="user-box">
           <input type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
