--- a/Frontend/src/app/addanswers/addanswers.component.css
+++ b/Frontend/src/app/addanswers/addanswers.component.css
@@ -10,7 +10,7 @@
   background:var(--ligt);
   box-sizing: border-box;
   border-radius: 20px;
-  font-family: nevis;
+  font-family: nevis,sans-serif;
   font-size: larger;
 }
 
@@ -81,5 +81,5 @@
   background-color: var(--dark);
   font-size: 17px;
   color: var(--ligt);
-  font-family: nevis;
+  font-family: nevis,sans-serif;
 }
