--- a/Frontend/src/app/answerlist/answerlist.component.html
+++ b/Frontend/src/app/answerlist/answerlist.component.html
@@ -6,7 +6,7 @@
                 background-size: cover;"></div>
                 <mat-card-title><em>{{answer.user}}</em> </mat-card-title>
                 <div *ngIf="answer.correctAnswer">
-                <button class="ba"><i>Accepted answer</i></button>
+                <button class="ba"><em>Accepted answer</em></button>
                 </div>
             </mat-card-header><br>
             <mat-card-content>
