--- a/Frontend/src/app/login-page/login-page.component.css
+++ b/Frontend/src/app/login-page/login-page.component.css
@@ -15,7 +15,7 @@
   background:var(--ligt);
   box-sizing: border-box;
   border-radius: 20px;
-  font-family: nevis;
+  font-family: nevis,sans-serif;
   font-size: larger;
 }
 
