successfully integrated comments

--- a/Frontend/src/app/answerlist/answerlist.component.css
+++ b/Frontend/src/app/answerlist/answerlist.component.css
@@ -32,19 +32,22 @@
   cursor: pointer;
 }
 
-.bu {
-  position: relative;
-  display: inline-block;
-  padding: 10px 10px;
-  color: var(--dark);
+.button {
+  border-radius: 4px;
   background-color: var(--ligt);
-  font-size: 12px;
-  margin-top: 1%;
-  border-radius: 5px;
-}
-.bu:hover {
-  color: var(--ligt);
-  background-color: var(--dark);
+  border: none;
+  color: var(--dark);
+  text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  width: 135px;
+  transition: all 0.5s;
   cursor: pointer;
+  margin: 5px;
+}
+
+.button:hover{
+  background-color: var(--dark);
+  color: var(--ligt);
 }
 
