--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -6,3 +6,4 @@
 
 
 <router-outlet></router-outlet>
+<footer style="color: var(--ligt); font-family: mario,sans-serif; margin-left: 44.5%; padding-bottom: 5%; position: absolute;"><em> Designed by Group 2 </em></footer>
