--- a/Frontend/src/app/login-page/login-page.component.html
+++ b/Frontend/src/app/login-page/login-page.component.html
@@ -10,7 +10,7 @@
           <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
           <label style="font-size:small;">Password<br></label>
         </div>
-        <span class="error">{{err}}</span>
+        <span class="error">{{err}}</span><br>
         <a (click)='loggedIn()'>
           Submit
         </a>
