--- a/Frontend/src/app/addcomments/addcomments.component.html
+++ b/Frontend/src/app/addcomments/addcomments.component.html
@@ -7,6 +7,6 @@
         <textarea rows="10" cols="40" formControlName="comBody" class="tx"></textarea>
       </div>
       <br><br>
-      <button class="button" (click)=>Add</button>
+      <button class="button" (click)=addCom() >Add</button>
     </form>
   </div>
