--- a/Frontend/src/app/answerlist/answerlist.component.html
+++ b/Frontend/src/app/answerlist/answerlist.component.html
@@ -11,18 +11,17 @@
             </mat-card-header><br>
             <mat-card-content>
                 {{answer.body}} <br> <br><br>
-                <button class="bu" (click)="addComment()">Add comment</button> &nbsp;&nbsp;&nbsp;
-                <button class="bu" (click)="showcomment(i)">View comments</button>
+                <button class="button" (click)="addComment(answer.ansId)">Add comment</button> &nbsp;&nbsp;&nbsp;
+                <button class="button" (click)="showcomment(i)">View comments</button> &nbsp;&nbsp;&nbsp;
+                <div *ngIf='mark' style="margin-top: -4.8%; margin-left: 33%;">
+                    <button class="button" (click)='upvote(answer.ansId)'>Mark as correct</button>
+                </div>
                 <div *ngIf="showVar[i]">
                     <p>
                     <app-commentlist ansId={{answer.ansId}}></app-commentlist>
                     </p>
                 </div>
             </mat-card-content>
-        
-    <div *ngIf='mark'>
-        <button class='b' (click)='upvote(answer.ansId)'>Mark</button>
-    </div>
     
 </mat-card><br>
         </div>
