--- a/Frontend/src/app/commentlist/commentlist.component.html
+++ b/Frontend/src/app/commentlist/commentlist.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="len">
     <div *ngFor="let comment of commentList">
-    <mat-card class="example-card" style="padding: 3%; background-color: var(--ligt); color:var(--dark);">
+    <mat-card class="example-card" style="padding: 2%; background-color: var(--ligt); color:var(--dark);">
         <mat-card-header>
             <div mat-card-avatar style="background-image: url({{comment.cphoto}});
             background-size: cover;"></div>
@@ -8,7 +8,7 @@
         </mat-card-header><br>
         <mat-card-content>
             {{comment.body}}
-        </mat-card-content><br>
+        </mat-card-content>
 
 </mat-card><br>
     </div>
