--- a/Frontend/src/app/addanswers/addanswers.component.html
+++ b/Frontend/src/app/addanswers/addanswers.component.html
@@ -7,6 +7,8 @@
       <textarea rows="10" cols="40" formControlName="ansBody" class="tx"></textarea>
     </div>
     <br><br>
+    <span class='err'>{{err}}</span>
+    <br>
     <button (click)="addAns()" class="button">Add</button>
   </form>
 </div>
