--- a/Frontend/src/app/addquestions/addquestions.component.html
+++ b/Frontend/src/app/addquestions/addquestions.component.html
@@ -10,21 +10,26 @@
 <option value="psychiatry">psychiatry</option>
 <option value="chess">chess</option>
 </select>
+<span class='err'>{{err1}}</span>
 <br><br><br>
       <div class="user-box">
         <input style="background-color: var(--dark);  width: 92%; margin-top: 2%; color: var(--ligt);" formControlName="Keywords">
         <label>Keywords (comma separated) <br><br></label>
       </div>
+      <span class='err'>{{err2}}</span>
       <div class="user-box">
         <label>Title:</label>
         <br><br>
         <textarea rows="3" cols="60" formControlName="quesTitle" class="tx"></textarea>
       </div>
+      <span class='err'>{{err3}}</span>
       <div class="user-box">
         <label>Description:</label>
         <br><br>
         <textarea rows="5" cols="60" formControlName="quesDesc" class="tx"></textarea>
-      </div> <br>
+      </div> 
+      <span class='err'>{{err4}}</span>
+      <br>
       <button mat-stroked-button class="button"(click)='addQues()'>Add</button>
     </form>
   </div>
