--- a/Frontend/src/app/login-page/login-page.component.html
+++ b/Frontend/src/app/login-page/login-page.component.html
@@ -14,6 +14,12 @@
         <a (click)='loggedIn()'>
           Submit
         </a>
+        <br>
+        <br>
+        <br>
+        <a (click)='signUp()'>
+          SignUp
+        </a>
       </form>
     </div>
   </div>
