--- a/Frontend/src/app/addcomments/addcomments.component.html
+++ b/Frontend/src/app/addcomments/addcomments.component.html
@@ -5,6 +5,7 @@
         <label>Enter Comment</label>
         <br><br>
         <textarea rows="10" cols="40" formControlName="comBody" class="tx"></textarea>
+        <span class='err'>{{err}}</span>
       </div>
       <br><br>
       <button class="button" (click)=addCom() >Add</button>
