--- a/Frontend/src/app/addquestions/addquestions.component.css
+++ b/Frontend/src/app/addquestions/addquestions.component.css
@@ -10,7 +10,7 @@
   background:var(--ligt);
   box-sizing: border-box;
   border-radius: 20px;
-  font-family: nevis,sans-serif;
+  font-family: sans-serif;
   font-size: larger;
 }
 
@@ -81,7 +81,7 @@
   background-color: var(--dark);
   font-size: 17px;
   color: var(--ligt);
-  font-family: nevis,sans-serif;
+  font-family: sans-serif;
 }
 
 .c{
@@ -93,4 +93,10 @@
 .c option :hover{
   color:var(--ligt);
   background-color: var(--dark);
+}
+
+.err{
+  color: red;
+  font-size: small;
+  position: fixed;
 }
