--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -2,7 +2,7 @@
   padding: 10px;
   text-align: center;
   color:var(--ligt);
-  font-family: mario,sans-serif;
+  font-family: sans-serif;
   font-size: 40px;
 }
 
