--- a/Frontend/src/app/login-page/login-page.component.css
+++ b/Frontend/src/app/login-page/login-page.component.css
@@ -5,7 +5,7 @@
 
   .login-box {
   position: absolute;
-  top: 64%;
+  top: 57%;
   left: 50%;
   width: 23%;
   height: 48%;
@@ -15,7 +15,7 @@
   background:var(--ligt);
   box-sizing: border-box;
   border-radius: 20px;
-  font-family: nevis,sans-serif;
+  font-family: sans-serif;
   font-size: larger;
 }
 
