--- a/Frontend/src/app/signup/signup.component.html
+++ b/Frontend/src/app/signup/signup.component.html
@@ -6,9 +6,7 @@
                 <input type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
                 <label style="font-size:small;">Username<br></label>
             </div>
-            <span class='err'>{{err1}}</span>
-            <br>
-            
+            <span class='err'>{{err1}}</span>         
             <div class="user-box">
                 <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
                 <label style="font-size:small;">Password<br></label>
@@ -16,7 +14,7 @@
             <span class='err'>{{err2}}</span>
             <div class="user-box">
                 <input type="password" [(ngModel)]="passwordAgain" [ngModelOptions]="{standalone: true}">
-                <label style="font-size:small;">Password Again<br></label>
+                <label style="font-size:small;">Confirm password<br></label>
             </div>
             <span class='err'>{{err3}}</span>
             <div class="user-box">
@@ -26,7 +24,7 @@
             <span class='err'>{{err4}}</span>
             <div class="user-box">
                 <label style="font-size:small;">Choose your topic: <br></label><br><br>
-                <select class="c" formControlName="topic" multiple="multiple" id="myMulti">
+                <select class="c" style="margin-top: -15%; margin-left: 25%;" formControlName="topic" multiple="multiple" id="myMulti">
                     <option  value="badminton">badminton</option>
                     <option value="algorithm">algorithm</option>
                     <option value="technology">technology</option>
@@ -35,12 +33,12 @@
                     <option value="chess">chess</option>
                 </select>
             </div>
-            <span class='err'>{{err5}}</span>
+            <span style="margin-top: 1%;" class='err'>{{err5}}</span>
+            <br>
             <a (click)='loggedIn()'>
                 Submit
             </a>
-            <br>
-            <span>{{err}}</span>
+            <span class="err" style="margin-top: -90%; margin-left: -30%;">{{err}}</span>
         </form>
     </div>
 </div>
