--- a/Frontend/src/app/signup/signup.component.html
+++ b/Frontend/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="backg">
+<div class="backg" style="padding-bottom: 5%;">
     <div class="login-box">
         <h2><em>SIGNUP</em></h2>
         <form [formGroup]='signup'>
